fix: Hacky fix to align Let's Connect H2 spacing with H2 spacing in rest of sidebar.

--- a/src/scss/components/_lets_connect.scss
+++ b/src/scss/components/_lets_connect.scss
@@ -1,4 +1,7 @@
 div.lets_connect {
+  h2 {
+    margin-bottom: 20px;
+  }
   div.lets_connect_links {
     justify-content: space-evenly;
     align-content: center;
